[package]
name = "seawater"
version = "0.1.1"
edition = "2021"
description = "A high performance entity component system useful as a backend for developing GUI applications and video games."
repository = "https://github.com/ii887522/seawater"
license = "MIT"
keywords = ["ecs", "water", "seawater"]
exclude = [
  ".github/*",
  ".vscode/*",
  "seawater-macro/.gitignore",
  "tests/*",
  ".editorconfig",
  ".gitignore",
  "CODE_OF_CONDUCT.md",
  "LICENSE",
  "README.md",
  "rustfmt.toml"
]

[dependencies]
iron-ingot = "0.4.1"
seawater-macro = "0.1.0"
