[package]
name = "seawater-macro"
version = "0.1.0"
edition = "2021"
description = "It is a procedural macro library used together with seawater."
repository = "https://github.com/ii887522/seawater"
license = "MIT"
keywords = ["ecs", "entity-component-system", "water", "seawater"]
exclude = [".gitignore", "README.md"]

[lib]
proc-macro = true

[dependencies]
iron-ingot = "0.2.0"
syn = { version = "1.0.94", features = ["full"] }
quote = "1.0.18"
