[package]
name = "seawater-macro"
version = "0.2.2"
edition = "2021"
description = "A procedural macro library used together with seawater."
repository = "https://github.com/ii887522/seawater"
license = "MIT"
keywords = ["ecs", "water", "seawater"]
exclude = [".gitignore", "LICENSE", "README.md"]

[lib]
proc-macro = true

[dependencies]
iron-ingot = "0.4.1"
syn = { version = "1.0.96", features = ["full"] }
quote = "1.0.18"
